[gd_scene load_steps=3 format=2]

[ext_resource path="res://side_panel.gd" type="Script" id=1]
[ext_resource path="res://avatars/default_avatar.png" type="Texture" id=2]

[node name="SidePanel" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 160, 800 )
mouse_filter = 1
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -360.0
rect_min_size = Vector2( 360, 1280 )

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MarginContainer3" type="MarginContainer" parent="ColorRect/VBoxContainer"]
margin_right = 360.0
margin_bottom = 188.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.22

[node name="AccountButton" type="Button" parent="ColorRect/VBoxContainer/MarginContainer3"]
margin_right = 360.0
margin_bottom = 188.0
text = "Никнейм"
icon = ExtResource( 2 )
flat = true
expand_icon = true

[node name="ChatButton" type="Button" parent="ColorRect/VBoxContainer"]
unique_name_in_owner = true
margin_top = 192.0
margin_right = 360.0
margin_bottom = 226.0
text = "Название беседы"

[node name="MarginContainer" type="MarginContainer" parent="ColorRect/VBoxContainer"]
margin_top = 230.0
margin_right = 360.0
margin_bottom = 1088.0
size_flags_vertical = 3

[node name="OptionsButton" type="Button" parent="ColorRect/VBoxContainer"]
unique_name_in_owner = true
margin_top = 1092.0
margin_right = 360.0
margin_bottom = 1126.0
text = "Настройки"

[node name="AboutButton" type="Button" parent="ColorRect/VBoxContainer"]
unique_name_in_owner = true
margin_top = 1130.0
margin_right = 360.0
margin_bottom = 1164.0
size_flags_stretch_ratio = 2.0
text = "О нас"

[node name="MarginContainer2" type="MarginContainer" parent="ColorRect/VBoxContainer"]
margin_top = 1168.0
margin_right = 360.0
margin_bottom = 1280.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.13

[connection signal="item_rect_changed" from="." to="." method="_on_SidePanel_item_rect_changed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/ChatButton" to="." method="_on_ChatButton_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/AboutButton" to="." method="_on_AboutButton_pressed"]
